[package]
name = "const-gen-derive"
version = "1.1.2"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
description = """
A derive macro for the const-gen crate.
"""
edition = "2018"
keywords = ["const", "constants", "compile-time", "build"]
homepage = "https://github.com/Eolu/const-gen-derive"
repository = "https://github.com/Eolu/const-gen-derive"
categories = ["accessibility", "config", "development-tools::build-utils"]
documentation = "https://docs.rs/const_gen_derive"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0"
